fix: filter proposals mobile menu z-index position

--- a/src/components/Search/FilterMenu.css
+++ b/src/components/Search/FilterMenu.css
@@ -50,7 +50,7 @@
   width: 293px;
   min-height: 100%;
   background-color: var(--white-900);
-  z-index: 11;
+  z-index: 21;
   padding: 15px 32px;
 }
 
